tests/rosetta/transpiler/C/bitmap-bresenhams-line-algorithm.error
compile failed: exit status 1: /tmp/ctranspile3425215523/bitmap-bresenhams-line-algorithm.mochi.c: In function ‘_mem’:
/tmp/ctranspile3425215523/bitmap-bresenhams-line-algorithm.mochi.c:54:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   54 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3425215523/bitmap-bresenhams-line-algorithm.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3425215523/bitmap-bresenhams-line-algorithm.mochi.c: In function ‘bresenham’:
/tmp/ctranspile3425215523/bitmap-bresenhams-line-algorithm.mochi.c:92:43: warning: passing argument 1 of ‘list_append_int_new’ from incompatible pointer type [-Wincompatible-pointer-types]
   92 |                 pts = list_append_int_new(pts, pts_len, (Point){.x = x0, .y = y0});
      |                                           ^~~
      |                                           |
      |                                           Point *
/tmp/ctranspile3425215523/bitmap-bresenhams-line-algorithm.mochi.c:25:44: note: expected ‘const int *’ but argument is of type ‘Point *’
   25 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                 ~~~~~~~~~~~^~~
/tmp/ctranspile3425215523/bitmap-bresenhams-line-algorithm.mochi.c:92:64: error: incompatible type for argument 3 of ‘list_append_int_new’
   92 |                 pts = list_append_int_new(pts, pts_len, (Point){.x = x0, .y = y0});
      |                                                                ^~~~~~~~~~~~~~~~~~
      |                                                                |
      |                                                                Point
/tmp/ctranspile3425215523/bitmap-bresenhams-line-algorithm.mochi.c:25:65: note: expected ‘int’ but argument is of type ‘Point’
   25 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                                             ~~~~^~~

